--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,9 +1,10 @@
 name: Code Style
 
 on:
-  push:
-    branches:
-      - develop
+  workflow_dispatch:
+#  push:
+#    branches:
+#      - develop
 
 jobs:
   build:
